--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,9 @@
 #nav-bar {
    width: auto;
+   position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     height: 80px;
     background:  #00a087;
     color: #e8fdff;
@@ -11,7 +15,7 @@
   #nav-bar .logo {
     width: 80px;
     height: 80px;
-    /*padding-right: 10em;*/
+    float: left;
 
   }
 
@@ -19,7 +23,7 @@
   #nav-bar .header {
     width: 80px;
     height: 80px;
-    padding: 10px 10px;
-    font-size: 40px;
-
+    padding-left: 10px;
+    font-size: 2em;
+     float: left;
   }
