--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,7 +20,12 @@ body {
   background-color: #eee;
   font-family: 'Roboto Condensed', sans-serif;
 }
-
+main {
+  width: 450px;
+  margin: auto;
+  background-color: #fff;
+  padding-top: 140px;
+ }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
