--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -25,5 +25,6 @@
     height: 80px;
     padding-left: 10px;
     font-size: 2em;
-     float: left;
+    float: left;
+    line-height: 2.5em;
   }
