--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -22,9 +22,10 @@ body {
 }
 main {
   width: 450px;
-  margin: auto;
+  margin: 0 auto;
   background-color: #fff;
   padding-top: 140px;
+  padding-bottom: 140px;
  }
 
 /*
