--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,8 +7,8 @@
     height: 80px;
     background:  #00a087;
     color: #e8fdff;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding : 0 2em;
+    z-index: 1000;
 
 }
 
