--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -19,7 +19,6 @@
 
   }
 
-
   #nav-bar .header {
     width: 80px;
     height: 80px;
@@ -28,3 +27,29 @@
     float: left;
     line-height: 2.5em;
   }
+
+
+#nav-bar section.compose:hover {
+  background: #a0efca;
+  cursor: pointer;
+}
+
+#nav-bar section.compose {
+  font-size: 1em;
+  color: #017c69;
+  margin: 10px;
+  padding: 5px;
+  border: 1px solid black;
+  float: right;
+  border-radius: 5px;
+  background: #82bca1;
+}
+
+#nav-bar section.compose:hover h3 {
+  color: black;
+}
+
+#nav-bar section.compose h3 {
+  margin: 12px;
+  font-weight: 300;
+}
