--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,5 +1,5 @@
  #all-tweets {
-  margin: 0 2em;
+  margin: 1 2em;
   background-color: #ffffff;
   border: 1.25px solid #D0D0D0;
   border-radius: 3px;
@@ -53,15 +53,18 @@
 #all-tweets div {
   padding: 10px;
   margin: 5px;
+  word-wrap: break-word;
 }
 
 #all-tweets footer {
   border-top: 1px solid #D0D0D0;
   padding: 15px 5px;
   overflow: auto;
+  opacity: 0.6;
 }
 
 #all-tweets .post-date {
   float: left;
+  margin: 2px;
 }
 
