--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -7,64 +7,79 @@
 }
 
 
-#all-tweets h2 {
-  border: 25px;
-  margin-top: 10px;
-  /*background-color: #808080;*/
- /* border: 1px solid #D0D0D0;
-  border-radius: 1px;*/
-  padding: 20px;
-  float: left;
-}
+  #all-tweets h2 {
+    border: 25px;
+    margin-top: 10px;
+    /*background-color: #808080;*/
+   /* border: 1px solid #D0D0D0;
+    border-radius: 1px;*/
+    padding: 20px;
+    float: left;
+  }
 
-#all-tweets header {
-  /*background-color: #eee;*/
-  width: 100%;
-  overflow: auto;
-  /*opacity: 0.2;*/
-}
+  #all-tweets header {
+    /*background-color: #eee;*/
+    width: 100%;
+    overflow: auto;
+    /*opacity: 0.2;*/
+  }
 
-#all-tweets header {
-  background-color: #eee;
-  width: 100%;
-  overflow: auto;
-}
+  #all-tweets header {
+    background-color: #eee;
+    width: 100%;
+    overflow: auto;
+  }
 
-#all-tweets .profile {
-  height: 60px;
-  width: 60px;
-  float: left;
-  border-radius: 5px;
-  margin: 8px;
-}
+  #all-tweets .profile {
+    height: 60px;
+    width: 60px;
+    float: left;
+    border-radius: 5px;
+    margin: 8px;
+  }
 
-#all-tweets h2 {
-  border: 30px 0 0 0;
-  margin-top: 10px;
-  float: left;
-}
+  #all-tweets h2 {
+    border: 30px 0 0 0;
+    margin-top: 10px;
+    float: left;
+  }
 
-#all-tweets span.handle {
-  float: right;
-  margin: 15px 7.5px;
-  color: #76bf37
-}
+  #all-tweets span.handle {
+    float: right;
+    margin: 15px 7.5px;
+    color: #76bf37
+  }
 
-#all-tweets div {
-  padding: 10px;
-  margin: 5px;
-  word-wrap: break-word;
-}
+  #all-tweets div {
+    padding: 10px;
+    margin: 5px;
+    word-wrap: break-word;
+  }
 
-#all-tweets footer {
-  border-top: 1px solid #D0D0D0;
-  padding: 15px 5px;
-  overflow: auto;
-  opacity: 0.6;
-}
+  #all-tweets footer {
+    border-top: 1px solid #D0D0D0;
+    padding: 2px ;
+    overflow: auto;
+    opacity: 0.6;
+  }
 
-#all-tweets .post-date {
-  float: left;
-  margin: 2px;
-}
+  #all-tweets .post-date {
+    float: left;
+    margin: 2px;
+  }
+
+  #all-tweets .social {
+    float: right;
+    height: 30px;
+    width: 30px;
+    padding: 5px;
+    opacity: 0;
+  }
+
+  #all-tweets .social:hover {
+    opacity: 100;
+    cursor: pointer;
+  }
+
+
 
